fixed bug with the header in the session start

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container" fxLayout="column" @fade>
-      <app-header fxFlex="10"  @fade></app-header>
+      <app-header fxFlex="10"  @fade *ngIf="show"></app-header>
     <mat-drawer-container
     fxFlex="90"
     select-clickOutside
