fixed bugs in header with the log user

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,7 @@
-<div >HEADER WITH SOME INFO</div>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <button>MENU</button>
+  </mat-toolbar-row>
+  <mat-toolbar-row>HEADER STUFF</mat-toolbar-row>
+  <mat-toolbar-row>USER SECTION</mat-toolbar-row>
+</mat-toolbar>
