--- a/src/app/core/components/side-nav/side-nav.component.html
+++ b/src/app/core/components/side-nav/side-nav.component.html
@@ -1,1 +1,5 @@
-<p>side-nav works!</p>
+<div fxLayout="column" style="width: 15vw">
+  <button mat-button-raised [routerLink]="['/clientes']">Clientes</button>
+  <button mat-button-raised [routerLink]="['/productos']">Productos</button>
+  <button mat-button-raised [routerLink]="['/ventas']">Ventas</button>
+</div>
