routes,services,and resolvers created, been missing the component for each module

--- a/src/app/core/components/side-nav/side-nav.component.html
+++ b/src/app/core/components/side-nav/side-nav.component.html
@@ -1,5 +1,11 @@
 <div fxLayout="column" style="width: 15vw">
-  <button mat-button-raised [routerLink]="['/clientes']">Clientes</button>
-  <button mat-button-raised [routerLink]="['/productos']">Productos</button>
-  <button mat-button-raised [routerLink]="['/ventas']">Ventas</button>
+  <button mat-button-raised [routerLink]="['/clientes']" style="height: 10vh">
+    Clientes
+  </button>
+  <button mat-button-raised [routerLink]="['/productos']" style="height: 10vh">
+    Productos
+  </button>
+  <button mat-button-raised [routerLink]="['/ventas']" style="height: 10vh">
+    Ventas
+  </button>
 </div>
