fixed error in the import of headers components, added the option to register an user

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -16,7 +16,7 @@
       ><mat-card-title clas="title">Welcome </mat-card-title></mat-card-header
     >
     <mat-card-content fxFlex="40">
-      <form [formGroup]="user" (ngSubmit)="tryLogin()" id="ngemailForm">
+      <form [formGroup]="user" (ngSubmit)="tryLogin()" id="ngUserForm">
         <div fxLayout="column">
           <mat-form-field class="form-field" fxFlex="100">
             <mat-label>Email</mat-label>
@@ -26,8 +26,7 @@
               type="text"
             />
             <mat-error *ngIf="invalid('email')"
-              >Please, fill the email field</mat-error
-            >
+              >Este campo es requerido.</mat-error>
           </mat-form-field>
           <mat-form-field class="form-field" fxFlex="100">
             <mat-label>Password</mat-label>
@@ -37,7 +36,7 @@
               type="password"
             />
             <mat-error *ngIf="invalid('password')"
-              >Please, you need to submit a password</mat-error
+              >Este campo es requerido.</mat-error
             >
           </mat-form-field>
         </div>
@@ -51,7 +50,7 @@
           mat-raised-button
           type="submit"
           color="primary"
-          form="ngemailForm"
+          form="ngUserForm"
         >
           Log
         </button>
@@ -61,9 +60,9 @@
           mat-raised-button
           type="submit"
           color="warn"
-          (click)="restart()"
+          (click)="newUser()"
         >
-          Forgot password?
+          Nuevo usuario?
         </button>
       </div>
     </mat-card-actions>
