--- a/src/app/modules/clientes/pages/list/list.component.html
+++ b/src/app/modules/clientes/pages/list/list.component.html
@@ -1,1 +1,37 @@
-<p>list works!</p>
+<div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
+  <div fxFlex="40">
+    <table mat-table [dataSource]="clientes" class="mat-elevation-z8" fxFill>
+      <!-- Nombre Column -->
+      <ng-container matColumnDef="class">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">
+          <button fxFill mat-raised-button>{{ element.nombre }}</button>
+        </td>
+      </ng-container>
+
+      <!-- Apellido Column -->
+      <ng-container matColumnDef="class">
+        <th mat-header-cell *matHeaderCellDef>Apellido</th>
+        <td mat-cell *matCellDef="let element">
+          <button fxFill mat-raised-button>{{ element.apellido }}</button>
+        </td>
+      </ng-container>
+
+      <!-- Acciones Column -->
+      <ng-container matColumnDef="class">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <app-button-actions
+            [section]="'clientes'"
+            [name]="element.nombre"
+            [id]="element.id"
+          ></app-button-actions>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnas"></tr>
+    </table>
+  </div>
+  <mat-icon class="form-icon">assignment_ind</mat-icon>
+</div>
