preset the forms, missing submition and whole ventas form

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <mat-toolbar-row fxLayout="row">
     <div fxFlex="10" fxLayoutAlign="center center">
-      <button mat-button fxFill (click)="openSM()"><mat-icon>menu</mat-icon></button>
+      <button mat-raised-button fxFill (click)="openSM()"><mat-icon>menu</mat-icon></button>
     </div>
     <div fxFlex="70" 
     select-clickOutside  (CloseSideMenu)="dirAct($event)">
