--- a/src/app/modules/clientes/pages/list/list.component.html
+++ b/src/app/modules/clientes/pages/list/list.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="40">
     <table mat-table [dataSource]="clientes" class="mat-elevation-z8" fxFill>
       <!-- Nombre Column -->
-      <ng-container matColumnDef="class">
+      <ng-container matColumnDef="Nombre">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let element">
           <button fxFill mat-raised-button>{{ element.nombre }}</button>
@@ -10,7 +10,7 @@
       </ng-container>
 
       <!-- Apellido Column -->
-      <ng-container matColumnDef="class">
+      <ng-container matColumnDef="Apellido">
         <th mat-header-cell *matHeaderCellDef>Apellido</th>
         <td mat-cell *matCellDef="let element">
           <button fxFill mat-raised-button>{{ element.apellido }}</button>
@@ -18,7 +18,7 @@
       </ng-container>
 
       <!-- Acciones Column -->
-      <ng-container matColumnDef="class">
+      <ng-container matColumnDef="Acciones">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let element">
           <app-button-actions
