--- a/src/app/modules/etiquetas/pages/form/form.component.html
+++ b/src/app/modules/etiquetas/pages/form/form.component.html
@@ -1,1 +1,48 @@
-<p>form works!</p>
+<div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
+  <div fxFlex="40">
+    <mat-card fxLayout="column" fxLayoutAlign="center center">
+      <mat-card-header style="height: 10vh" class="ht-size"
+        >{{ isEdit ? "Editando" : "Creando" }}
+        <mat-icon>
+          {{ isEdit ? "edit" : "add_circle" }}
+        </mat-icon>
+      </mat-card-header>
+      <mat-card-content>
+        <form
+          [formGroup]="etiquetaForm"
+          id="ngEtiquetaForm"
+          (ngSubmit)="submit()"
+          fxLayout="column"
+        >
+          <mat-form-field class="form-field">
+            <mat-label>Nombre</mat-label>
+            <input matInput type="text" formControlName="nombre" />
+            <mat-error *ngIf="isInvalid('nombre')"
+              >Este campo es requerido.</mat-error
+            >
+          </mat-form-field>
+        </form>
+      </mat-card-content>
+      <mat-card-footer fxLayout="row" fxLayoutGap="1vw">
+        <button
+          fxFlex="50"
+          mat-raised-button
+          color="warn"
+          [routerLink]="['/productos/etiquetas']"
+        >
+          Cancelar
+        </button>
+        <button
+          fxFlex="50"
+          mat-raised-button
+          type="submit"
+          color="primary"
+          form="ngEtiquetaForm"
+        >
+          {{ isEdit ? "Confirmar" : "Crear" }}
+        </button>
+      </mat-card-footer>
+    </mat-card>
+  </div>
+  <mat-icon class="form-icon">assignment_ind</mat-icon>
+</div>
