--- a/src/app/modules/productos/pages/form/form.component.html
+++ b/src/app/modules/productos/pages/form/form.component.html
@@ -1,1 +1,86 @@
-<p>form works!</p>
+<div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
+  <div fxFlex="40">
+    <mat-card fxLayout="column" fxLayoutAlign="center center">
+      <mat-card-header style="height: 10vh" class="ht-size"
+        >{{ isEdit ? "Editando" : "Creando" }}
+        <mat-icon>
+          {{ isEdit ? "edit" : "add_circle" }}
+        </mat-icon>
+      </mat-card-header>
+      <mat-card-content>
+        <form
+          [formGroup]="productoForm"
+          id="ngProductoForm"
+          (ngSubmit)="submit()"
+          fxLayout="column"
+        >
+          <mat-form-field class="form-field" appearance="fill">
+            <mat-label>Nombre</mat-label>
+            <input matInput type="text" formControlName="nombre" />
+            <mat-error *ngIf="isInvalid('nombre')"
+              >Este campo es requerido.</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field class="form-field" appearance="fill">
+            <mat-label>Descripcion</mat-label>
+            <input matInput type="text" formControlName="descripcion" />
+            <mat-error *ngIf="isInvalid('descripcion')"
+              >Este campo es requerido.</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field class="form-field" appearance="fill">
+            <mat-label>Etiquetas producto</mat-label>
+            <mat-select>
+              <mat-option
+                *ngFor="let etiqueta of etiquetas"
+                (onSelectionChange)="addEtiqueta(etiqueta.id)"
+              >
+                {{ etiqueta.nombre }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-list>
+            <mat-list-item
+              role="cell"
+              *ngFor="let etiqueta of removed_etiquetas"
+            >
+              {{ etiqueta.nombre }}
+              <button
+                mat-raised-button
+                type="reset"
+                (click)="removeEtiqueta(etiqueta.id)"
+              >
+                <mat-icon color="warn">delete</mat-icon>
+              </button>
+            </mat-list-item>
+
+            <mat-error *ngIf="pushing"
+              >Maximo de tres etiquetas.</mat-error
+            >
+          </mat-list>
+        </form>
+      </mat-card-content>
+      <mat-card-footer fxLayout="row" fxLayoutGap="1vw">
+        <button
+          fxFlex="50"
+          mat-raised-button
+          color="warn"
+          [routerLink]="['/productos']"
+          [queryParams]="{ page: '1' }"
+        >
+          Cancelar
+        </button>
+        <button
+          fxFlex="50"
+          mat-raised-button
+          type="submit"
+          color="primary"
+          form="ngProductoForm"
+        >
+          {{ isEdit ? "Confirmar" : "Crear" }}
+        </button>
+      </mat-card-footer>
+    </mat-card>
+  </div>
+  <mat-icon class="form-icon">assignment_ind</mat-icon>
+</div>
