--- a/src/app/modules/ventas/pages/list/list.component.html
+++ b/src/app/modules/ventas/pages/list/list.component.html
@@ -1,1 +1,38 @@
-<p>list works!</p>
+<div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
+    <div fxFlex="40">
+      <table mat-table [dataSource]="ventas" class="mat-elevation-z8" fxFill>
+        <!-- Fecha Column -->
+        <ng-container matColumnDef="Fecha">
+          <th mat-header-cell *matHeaderCellDef>Fecha</th>
+          <td mat-cell *matCellDef="let element">
+            <button fxFill mat-raised-button>{{ element.fecha }}</button>
+          </td>
+        </ng-container>
+  
+        <!-- Monto Column -->
+        <ng-container matColumnDef="Monto">
+          <th mat-header-cell *matHeaderCellDef>Monto</th>
+          <td mat-cell *matCellDef="let element">
+            <button fxFill mat-raised-button>{{ element.monto }}</button>
+          </td>
+        </ng-container>
+  
+        <!-- Acciones Column -->
+        <ng-container matColumnDef="Acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let element">
+            <app-button-actions
+              [section]="'ventas'"
+              [name]="element.fecha"
+              [id]="element.id"
+            ></app-button-actions>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnas"></tr>
+      </table>
+    </div>
+    <mat-icon class="form-icon">assignment_ind</mat-icon>
+  </div>
+  
