--- a/src/app/modules/productos/pages/form/form.component.html
+++ b/src/app/modules/productos/pages/form/form.component.html
@@ -48,7 +48,7 @@
               <button
                 mat-raised-button
                 type="reset"
-                (click)="removeEtiqueta(etiqueta.id)"
+                (click)="removeEtiqueta(etiqueta)"
               >
                 <mat-icon color="warn">delete</mat-icon>
               </button>
