--- a/src/app/modules/ventas/pages/form/form.component.html
+++ b/src/app/modules/ventas/pages/form/form.component.html
@@ -1,20 +1,20 @@
 <div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
-  <div fxFlex="40">
-    <mat-card fxLayout="column" fxLayoutAlign="center center">
+  <div style="width:fit-content">
+    <mat-card fxLayout="column" fxLayoutAlign="center center" style="width:fit-content">
       <mat-card-header style="height: 10vh" class="ht-size"
         >{{ isEdit ? "Editando" : "Creando" }}
         <mat-icon>
           {{ isEdit ? "edit" : "add_circle" }}
         </mat-icon>
       </mat-card-header>
-      <mat-card-content>
+      <mat-card-content >
         <form
           [formGroup]="ventaForm"
           id="ngVentaForm"
           (ngSubmit)="submit()"
           fxLayout="column"
         >
-          <mat-form-field class="form-field">
+          <mat-form-field class="form-field" appearance="fill">
             <mat-label>Cliente</mat-label>
             <mat-select matInput formControlName="cliente_id">
               <mat-option *ngFor="let cliente of clientes" [value]="cliente.id"
@@ -25,7 +25,7 @@
               >Este campo es requerido.</mat-error
             >
           </mat-form-field>
-          <mat-form-field class="form-field">
+          <mat-form-field class="form-field" appearance="fill">
             <mat-label>Fecha</mat-label>
             <input matInput type="date" formControlName="fecha" />
             <mat-datepicker #picker></mat-datepicker>
@@ -33,7 +33,7 @@
               >Este campo es requerido.</mat-error
             >
           </mat-form-field>
-          <mat-form-field class="form-field">
+          <mat-form-field class="form-field" appearance="fill">
             <mat-label>Monto</mat-label>
             <input matInput type="number" formControlName="monto" />
             <mat-error *ngIf="isInvalid('monto')"
@@ -41,6 +41,8 @@
             >
           </mat-form-field>
         </form>
+      </mat-card-content>
+      <mat-card-content  style="width:fit-content">
         <app-productos-ventas-form
           [productos]="productos"
         ></app-productos-ventas-form>
