added deletion of item in the list section, paginator working, and stepper in the ventas form missing the deletion of  producto in each venta

--- a/src/app/modules/etiquetas/pages/list/list.component.html
+++ b/src/app/modules/etiquetas/pages/list/list.component.html
@@ -25,6 +25,12 @@
         <tr mat-header-row *matHeaderRowDef="columnas"></tr>
         <tr mat-row *matRowDef="let row; columns: columnas"></tr>
       </table>
+      <mat-paginator
+      [pageSize]="5"
+      [length]="total"
+      [pageIndex]="currentPage!-1"
+      (page)="pageChangeEvent($event)"
+    ></mat-paginator>
     </div>
     <mat-icon class="form-icon">assignment_ind</mat-icon>
   </div>
