--- a/src/app/modules/clientes/pages/list/list.component.html
+++ b/src/app/modules/clientes/pages/list/list.component.html
@@ -25,6 +25,7 @@
             [section]="'clientes'"
             [name]="element.nombre"
             [id]="element.id"
+            (erase)="delete($event)"
           ></app-button-actions>
         </td>
       </ng-container>
@@ -32,6 +33,12 @@
       <tr mat-header-row *matHeaderRowDef="columnas"></tr>
       <tr mat-row *matRowDef="let row; columns: columnas"></tr>
     </table>
+    <mat-paginator
+      [pageSize]="5"
+      [length]="total"
+      [pageIndex]="currentPage!-1"
+      (page)="pageChangeEvent($event)"
+    ></mat-paginator>
   </div>
   <mat-icon class="form-icon">assignment_ind</mat-icon>
 </div>
