--- a/src/app/modules/ventas/pages/form/form.component.html
+++ b/src/app/modules/ventas/pages/form/form.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
-  <mat-card fxFlex="40" fxLayout="column" fxLayoutAlign="center center">
+  <mat-card fxFlex="60" fxLayout="column" fxLayoutAlign="center center">
     <mat-card-header style="height: 10vh" class="ht-size"
       >{{ isEdit ? "Editando" : "Creando" }}
       <mat-icon>
@@ -7,77 +7,84 @@
       </mat-icon>
     </mat-card-header>
     <mat-card-content fxFill fxLayout="row" fxLayoutAlign="center center">
-      <form
-        fxFlex="60"
-        [formGroup]="ventaForm"
-        id="ngVentaForm"
-        (ngSubmit)="submit()"
-        fxLayout="column"
-      >
-        <mat-form-field class="form-field" appearance="fill">
-          <mat-label>Cliente</mat-label>
-          <mat-select matInput formControlName="cliente_id">
-            <mat-option *ngFor="let cliente of clientes" [value]="cliente.id"
-              >{{ cliente.nombre }} {{ cliente.apellido }}</mat-option
-            >
-          </mat-select>
-          <mat-error *ngIf="isInvalid('cliente_id')"
-            >Este campo es requerido.</mat-error
+      <mat-stepper orientation="vertical" [linear]="!isEdit" fxFlex="80">
+        <mat-step
+          [stepControl]="ventaForm"
+          [label]="isEdit ? 'Modificar Venta' : 'Cargar venta'"
+          fxLayoutAlign="center center"
+        >
+          <form
+            fxFlex="60"
+            [formGroup]="ventaForm"
+            id="ngVentaForm"
+            (ngSubmit)="submit()"
+            fxLayout="column"
           >
-        </mat-form-field>
-        <mat-form-field class="form-field" appearance="fill">
-          <mat-label>Fecha</mat-label>
-          <input matInput type="date" formControlName="fecha" />
-          <mat-datepicker #picker></mat-datepicker>
-          <mat-error *ngIf="isInvalid('fecha')"
-            >Este campo es requerido.</mat-error
-          >
-        </mat-form-field>
-        <mat-form-field class="form-field" appearance="fill">
-          <mat-label>Monto</mat-label>
-          <input matInput type="number" formControlName="monto" />
-          <mat-error *ngIf="isInvalid('monto')"
-            >Este campo es invalido.</mat-error
-          >
-        </mat-form-field>
-        <mat-card-footer fxLayout="row" fxLayoutGap="1vw">
-          <button
-            fxFlex="50"
-            mat-raised-button
-            color="warn"
-            [routerLink]="['/ventas']"
-            [queryParams]="{ page: '1' }"
-          >
-            Cancelar
-          </button>
-          <button
-            fxFlex="50"
-            mat-raised-button
-            type="submit"
-            color="primary"
-            form="ngVentaForm"
-          >
-            {{ isEdit ? "Confirmar" : "Crear" }}
-          </button>
-        </mat-card-footer>
-      </form>
-    </mat-card-content>
-    <mat-card-header style="height: 10vh" class="ht-size" style="padding-top:3vh"
-      >Cargar productos en la venta</mat-card-header
-    >
-    <mat-card-content fxFill fxLayout="row" fxLayoutAlign="center center">
-      <div fxFlex="60" fxLayout="column">
-        <app-productos-ventas-form
-          [id]="ventaForm.controls['id'].value"
-          [productos]="productos"
-          (addProducto)="pushProducto($event)"
-        ></app-productos-ventas-form>
-        <app-productos-ventas-form
-          *ngFor="let prodEnLista of prodListados"
-          [productos]="productos"
-          [prodEnLista]="prodEnLista"
-        ></app-productos-ventas-form>
-      </div>
+            <mat-form-field class="form-field" appearance="fill">
+              <mat-label>Cliente</mat-label>
+              <mat-select matInput formControlName="cliente_id">
+                <mat-option
+                  *ngFor="let cliente of clientes"
+                  [value]="cliente.id"
+                  >{{ cliente.nombre }} {{ cliente.apellido }}</mat-option
+                >
+              </mat-select>
+              <mat-error *ngIf="isInvalid('cliente_id')"
+                >Este campo es requerido.</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="form-field" appearance="fill">
+              <mat-label>Fecha</mat-label>
+              <input matInput type="date" formControlName="fecha" />
+              <mat-datepicker #picker></mat-datepicker>
+              <mat-error *ngIf="isInvalid('fecha')"
+                >Este campo es requerido.</mat-error
+              >
+            </mat-form-field>
+            <mat-form-field class="form-field" appearance="fill">
+              <mat-label>Monto</mat-label>
+              <input matInput type="number" formControlName="monto" />
+              <mat-error *ngIf="isInvalid('monto')"
+                >Este campo es invalido.</mat-error
+              >
+            </mat-form-field>
+            <mat-card-footer fxLayout="row" fxLayoutGap="1vw">
+              <button
+                fxFlex="50"
+                mat-raised-button
+                color="warn"
+                [routerLink]="['/ventas']"
+                [queryParams]="{ page: '1' }"
+              >
+                Cancelar
+              </button>
+              <button
+                fxFlex="50"
+                mat-raised-button
+                type="submit"
+                color="primary"
+                form="ngVentaForm"
+              >
+                {{ isEdit ? "Confirmar" : "Crear" }}
+              </button>
+            </mat-card-footer>
+          </form>
+        </mat-step>
+        <mat-step label="Cargar productos">
+            <app-productos-ventas-form
+              [id]="ventaForm.controls['id'].value"
+              [productos]="productos"
+              (addProducto)="pushProducto($event)"
+            ></app-productos-ventas-form>
+          </mat-step>
+<mat-step label="Listado productos">
+  <app-productos-ventas-form
+      *ngFor="let prodEnLista of prodListados"
+      [productos]="productos"
+      [prodEnLista]="prodEnLista"
+    ></app-productos-ventas-form>
+</mat-step>
+      </mat-stepper>
     </mat-card-content>
     <mat-card-footer>
       <button
