fixed error in clientes creation

--- a/src/app/modules/productos/pages/list/list.component.html
+++ b/src/app/modules/productos/pages/list/list.component.html
@@ -25,6 +25,7 @@
             [section]="'productos'"
             [name]="element.nombre"
             [id]="element.id"
+            (erase)="delete($event)"
           ></app-button-actions>
         </td>
       </ng-container>
