--- a/src/app/modules/etiquetas/pages/list/list.component.html
+++ b/src/app/modules/etiquetas/pages/list/list.component.html
@@ -1,37 +1,37 @@
 <div class="wrapper" fxLayout="row" fxLayoutAlign="space-evenly center">
-    <div fxFlex="40">
-      <table mat-table [dataSource]="etiquetas" class="mat-elevation-z8" fxFill>
-        <!-- Nombre Column -->
-        <ng-container matColumnDef="Nombre">
-          <th mat-header-cell *matHeaderCellDef>Nombre</th>
-          <td mat-cell *matCellDef="let element">
-            <button fxFill mat-raised-button>{{ element.nombre }}</button>
-          </td>
-        </ng-container>
-  
-        <!-- Acciones Column -->
-        <ng-container matColumnDef="Acciones">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let element">
-            <app-button-actions
-              [section]="'productos'"
-              [name]="element.nombre"
-              [subCategory]="'etiquetas'"
-              [id]="element.id"
-            ></app-button-actions>
-          </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnas"></tr>
-      </table>
-      <mat-paginator
+  <div fxFlex="40">
+    <table mat-table [dataSource]="etiquetas" class="mat-elevation-z8" fxFill>
+      <!-- Nombre Column -->
+      <ng-container matColumnDef="Nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">
+          <button fxFill mat-raised-button>{{ element.nombre }}</button>
+        </td>
+      </ng-container>
+
+      <!-- Acciones Column -->
+      <ng-container matColumnDef="Acciones">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <app-button-actions
+            [section]="'productos'"
+            [name]="element.nombre"
+            [subCategory]="'etiquetas'"
+            (erase)="delete($event)"
+            [id]="element.id"
+          ></app-button-actions>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnas"></tr>
+    </table>
+    <mat-paginator
       [pageSize]="5"
       [length]="total"
-      [pageIndex]="currentPage!-1"
+      [pageIndex]="currentPage! - 1"
       (page)="pageChangeEvent($event)"
     ></mat-paginator>
-    </div>
-    <mat-icon class="form-icon">assignment_ind</mat-icon>
   </div>
-  
+  <mat-icon class="form-icon">assignment_ind</mat-icon>
+</div>
