--- a/src/app/modules/ventas/components/productos-ventas-form/productos-ventas-form.component.html
+++ b/src/app/modules/ventas/components/productos-ventas-form/productos-ventas-form.component.html
@@ -28,7 +28,7 @@
     </mat-form-field>
     <mat-form-field class="form-field" appearance="fill" fxFlex="20">
       <mat-label>Total</mat-label>
-      <input matInput type="number" formControlName="total" />
+      <input matInput formControlName="total" />
     </mat-form-field>
     <button
       fxFlex="5"
